# TEMath

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CodeStyleConvention.md  README.md  xd.txt
benchmarks/: CMakeLists.txt  main.cpp
include/: tem.hpp
include/base/: basic_preprocessor.hpp  tem.basic_types.hpp
include/basic/: tem.mat2.hpp  tem.mat3.hpp  tem.mat4.hpp  tem.vec4.hpp
lib/: CMakeLists.txt
lib/headers/: basic_preprocessor.hpp  mat4.hpp  tem.angle_units.hpp  tem.basic_types.hpp  tem.hpp  tem.mat2.hpp  tem.mat3.hpp  tem.mat4.hpp  tem.matrix_core.hpp  tem.vec2.hpp  tem.vec3.hpp  tem.vec4.hpp  tem.vector_core.hpp
lib/headers/avx/: avx_processor.hpp  tem.mat2.hpp  tem.mat3.hpp  tem.mat4.hpp  tem.vec2.hpp  tem.vec3.hpp  tem.vec4.hpp
lib/headers/avx2/: avx2_processor.hpp  tem.mat2.hpp  tem.mat3.hpp  tem.mat4.hpp  tem.vec2.hpp  tem.vec3.hpp  tem.vec4.hpp
lib/headers/base/: tem.basic_math.hpp
lib/headers/basic/: tem.vec2.hpp  tem.vec3.hpp
lib/source/: tem.angle_units.cpp  tem.basic_math.cpp  tem.mat2.cpp  tem.mat3.cpp  tem.mat4.cpp  tem.vec2.cpp  tem.vec3.cpp  tem.vec4.cpp
lib/source/avx/: tem.mat2.cpp  tem.mat3.cpp  tem.mat4.cpp  tem.vec2.cpp  tem.vec3.cpp  tem.vec4.cpp
lib/source/avx2/: tem.mat2.cpp  tem.mat3.cpp  tem.mat4.cpp  tem.vec2.cpp  tem.vec3.cpp  tem.vec4.cpp
lib/source/base/: tem.angle_units.cpp  tem.basic_math.cpp
lib/source/basic/: tem.mat2.cpp  tem.mat3.cpp  tem.mat4.cpp  tem.vec2.cpp  tem.vec3.cpp  tem.vec4.cpp
scripts/linux/: Build.sh  FullCleanBuild.sh  RunBenchmark.sh  RunUnitTests.sh
scripts/win64/: Build.ps1  FullCleanBuild.ps1  RunBenchmark.ps1  RunUnitTests.ps1
source/: tem.angle_units.cpp  tem.basic_math.cpp  tem.mat2.cpp  tem.mat3.cpp  tem.mat4.cpp  tem.vec2.cpp  tem.vec3.cpp  tem.vec4.cpp
source/test/: OutputColor.cpp  OutputColor.hpp  Test.hpp  TestDef.hpp  Tests-mat2.cpp  Tests-mat2.hpp  Tests-mat3.cpp  Tests-mat3.hpp  Tests-mat4.cpp  Tests-vec2.cpp  Tests-vec3.cpp  Tests-vec3.hpp  Tests-vec4.cpp  Tests-vec4.hpp  Tests.hpp  main.cpp
test/: CMakeLists.txt
test/source/: TestDef.cpp  Tests-mat2.cpp  Tests-mat3.cpp  Tests-mat4.cpp  Tests-mat4.hpp  Tests-vec2.cpp  Tests-vec2.hpp  Tests-vec3.cpp  Tests-vec4.cpp  main.cpp
win64/: Build.ps1  RunBenchmark.ps1
